--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,17 @@
 body {
-    padding-top: 56px; /* Adjusted for fixed navbar height */
+    padding-top: 76px; /* Adjusted for fixed navbar height */
   }
+
+
+  /* Custom styles for the banner */
 
   .img-logo{
     width: 50px;
     border-radius: 50%;
   }
-  /* Custom styles for the banner */
+
   .banner {
-      background-image: url('../img/banner5.jpg'); /* Add your banner image URL */
+      background-image: url('../img/banner.jpg'); /* Add your banner image URL */
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -62,4 +65,8 @@ body {
   .ageButton{
     margin-top:-5px;
     margin-left: 10px;
+  }
+
+  .footer-title-header{
+    text-decoration: underline;
   }
